--- a/css/style.css
+++ b/css/style.css
@@ -2,48 +2,10 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    text-decoration: none
 
 }
 @import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
-
-/* -------------HEADER---------------- */
-/* .grid{
-    display: grid;
-    width: 800px;
-    height: 400px;
-    grid-template-columns: repeat(4 , 1fr);
-    grid-template-rows: 1fr 1fr 1fr;
-    grid-template-areas:
-    "..... caja2 caja2 caja" 
-    "caja1 caja3 caja4 caja5"
-    "caja1 caja3 caja6 caja6"
-    ;
-    
-    
-}
-
-.cajas{
-    border: 2px solid red   ;
-}
-
-.caja1{
-    grid-area: caja1;
-}
-.caja2{
-    grid-area: caja2;
-}
-.caja3{
-    grid-area: caja3;
-}
-.caja4{
-    grid-area: caja4;
-}
-.caja5{
-    grid-area: caja5;
-}
-.caja6{
-    grid-area: caja6;
-} */
 /* ----------------------------inicio----------------- */
 .caja{
     border: 1px solid rgba(128, 128, 128, 0.329);
@@ -172,24 +134,434 @@ justify-content: center;
 
 /* ---------pagina sunbreak---------- */
 
-.gridsunbreak{
+.flexsunbreak{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    height: 100px;
+    background-color: red;
+}
+
+.logosunk{
+    width: 150px;
+    height: 100px;
+}
+
+.caja-menu{
+    width: 500px;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    list-style: none;
+    
+
+
+}
+
+.caja-hijomenu{
+    width: 200px;
+    height: 50px;
+    color: rgba(231, 230, 213, 0.644);
+    font-size: 30px;
+}
+
+.herosunbreak{
+    background-image: url(../img/fondo.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 600px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 20px;
+    border: 2px solid black;
+    
+}
+
+.herosunbreak-hijo{
+    width:1000px;
+    height: 600px;
+    background-color:;
+    margin: 2px;
+}
+.herosunbreak-hijo2{
+    width: 500px;
+    height: 400px;
+    background-color: ;
+    margin: 2px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.herosunbreak-hijo3{
+    width: 600px;
+    height: 400px;
+    background-color: rgba(169, 169, 169, 0.301);
+    border: 2px solid black;
+    margin: 20px;
+    text-align: center;
+}
+
+.herosunbreak-hijo4{
+    width: 300px;
+    height: 400px;
+    background-color: rgba(169, 169, 169, 0.301);
+    border: 2px solid black;
+    margin: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.barrasep{
+    background-color: red;
+    height: 200px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;    
+}
+.f2{
+    width: 50%;
+    height: 100%;
+}
+.barrasep h2 {
+    font-size: 60px;
+    color: black;
+}
+
+@media (max-width: 460px){
+    .caja-menu{
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+        padding: 30px;
+    }
+    .caja-hijomenu{
+        width: 200px;
+        height: 70px;
+        background-color: black;
+        margin: 2px;
+    }
+
+.herosunbreak{
+    flex-direction: column;
+    height: 800px;
+}
+.herosunbreak-hijo{
+    width: 300px;
+    height: 300px;
+    margin: 2px;
+}
+}
+
+.elgado{
+    width: 100%;
+    height: 900px;
+    background-image: url(../img/elgado.jpg);
+    background-size: cover;
+    background-position: left;
+    display: flex;
+    align-content: center;
+    align-items: center;
+    border: 2px solid black;
+
+}
+
+.elgadocaja1{
+    width: 400px;
+    height:250px;
+    background-color: black;
+    margin: 2px;
+
+}
+
+.f1foto{
+    width:100%;
+    height:100%;
+}
+
+.f2{
+    width: 100%;
+    height: 100%;
+}
+
+.gridarmas{
     display: grid;
-    grid-template-columns: 100px 100px 100px 100px;
-    grid-template-rows: 100px 100px 100px 100px;
+    grid-template-columns:  25% 25% 25% 25%;
+    grid-template-rows:  200px 200px 200px 10px;
+    border: 2px solid red;
+    background-color:black;
+
+    
 }
 
-.s1{
-grid-area:s1
+.armas{
+border: 2px solid black;
+margin: 2px;
 }
 
-.s2{
-    grid-area:s2
+.x1{
+    background-image: url(../img/espada\ larga.jpg);
+    background-size: cover;
+}
+.x2{
+    background-image: url(../img/martillo.jpg);
+    background-size: cover;
+}
+.x3{
+    background-image: url(../img/heavybow.png);
+    background-size: cover;
+}
+.x4{
+    background-image: url(../img/hunthorn.jpg);
+    background-size: cover;
+}
+.x5{
+    background-image: url(../img/bow.jpg);
+    background-size: cover;
+}
+.x6{
+    background-image: url(../img/great.jpg);
+    background-size: cover;
+}
+.x7{
+    background-image: url(../img/dual.jpg);
+    background-size: cover;
+}
+.x8{
+    background-image: url(../img/ligh.jpg);
+    background-size: cover;
+}
+.x9{
+    background-image: url(../img/espada\ escudo.jpg);
+    background-size: cover;
+}
+.x10{
+    background-image: url(../img/insect.jpg);
+    background-size: cover;
+}
+.x11{
+    background-image: url(../img/maxresdefault.jpg);
+    background-size: cover;
+}
+.x12{
+    background-image: url(../img/gunlance.jpg);
+    background-size: cover;
+}
+.x13{
+    background-image: url(../img/espada\ larga.jpg);
+    background-size: cover;
+}
+.x14{
+    background-image: url(../img/espada\ larga.jpg);
+    background-size: cover;
 }
 
-.s3{
-    grid-area: s3;
+@media (max-width: 460px){
+    .gridarmas{
+        grid-template-columns: 1fr;
+        grid-template-rows:  200px 200px 200px 200px 200px 200px 200px 200px 200px 200px 200px 200px;
+
+    }
+
+    .elgado{
+        flex-direction: column;
+    }
 }
 
-.s4{
-    grid-area:s4;
+.contenedorFooter {
+    display: flex;
+    width: 100vw;
+    height: 500px;
+    background-color: rgb(255, 0, 0);
+    background-image: linear-gradient( rgba(0, 0, 0, 0.87), rgba(0, 0, 0,0.7)), ;
+    justify-content: space-around;
+    align-items: center;
+    border-top: 2px solid rgba(255, 255, 255, 0.144);
+}
+
+.contenedorFooter  {
+    display: flex;
+    width: 100%;
+    height: 600px;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.contenedorRedesNew {
+    width: 600px;
+    height: 350px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.imagenfooter{
+    max-width: 100%;
+    height: 100%;
+}
+
+
+
+/* -----------------pagina rise-------------------------- */
+.flexrise{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    height: 100px;
+    background-color: rgb(4, 0, 255);
+    border: 2px solid black;
+}
+
+.logosunk{
+    width: 150px;
+    height: 100px;
+}
+
+.caja-menu{
+    width: 500px;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    list-style: none;
+    
+
+
+}
+
+.caja-hijomenu{
+    width: 200px;
+    height: 50px;
+    color: rgba(231, 230, 213, 0.644);
+    font-size: 30px;
+}
+
+.herorise{
+    background-image: url(../img/herorise2.jpg);
+    background-size: cover;
+    width: 100%;
+    height: 900px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border: 2px solid black;
+}
+
+.videorise{
+    width: 1000px;
+    height: 800px;
+    padding: 60px;
+}
+.cuadrorise{
+    width: 500px;
+    height: 500px;
+    background-color: darkgray;
+    border: 2px solid black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 200px;
+}
+
+.frenesi{
+    background-image: url(../img/rampage.JPG);
+    background-size: cover;
+    width: 100%;
+    height: 1000px;
+    display: flex;
+    flex-direction: column;
+    
+}
+
+.kamura{
+    width: 300px;
+    height: 300px;
+    background-color: blue;
+    margin: 10px;
+}
+
+.asedio{
+    width: 400px;
+    height: 400px;
+    background-color: yellow;
+    margin: 10px;
+}
+
+.heroes{
+    width: 300px;
+    height: 300px;
+    background-color: red;
+    margin: 10px;
+}
+
+.areas{
+    width: 100%;
+    height: 700px;
+    border: 2px solid black;
+    display: flex;
+}
+
+.ciudad{
+    width: 50%;
+    height: 700px;
+    background-image: url(../img/kamura.jpg);
+    border: 2px solid black;
+}
+
+.zonagatos{
+    width: 50%;
+    height: 700px;
+    background-image: url(../img/zonagatos.png );
+    background-size: cover;
+    border: 2px solid black;
+}
+
+
+.salareunion{
+    width: 100%;
+    height: 1000px;
+    background-image: url(../img/Monster_Hunter_Rise_Gathering_Hub.jpeg);
+    background-size: cover;
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+}
+
+.reunioncocina{
+    background-image: url(../img/cocina.JPG);
+    border: 2px solid black;
+    background-position: center;
+    background-size: cover;
+    width: 90vh;
+    height: 800px;
+    margin: 20px;
+    
+}
+
+.contenedorFooterrise {
+    display: flex;
+    width: 100vw;
+    height: 500px;
+    background-color: rgb(0, 17, 255);
+    background-image: linear-gradient( rgba(0, 0, 0, 0.87), rgba(0, 0, 0,0.7)), ;
+    justify-content: space-around;
+    align-items: center;
+    border-top: 2px solid rgba(255, 255, 255, 0.144);
+}
+
+
+
+.imagenfooter{
+    max-width: 100%;
+    height: 100%;
 }
