--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    text-decoration: none
+    
 
 }
 @import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
@@ -38,6 +38,9 @@
     
     }
 
+.caja1:hover{
+    transform: scale(1.1);
+}
 
 .caja2{
     grid-area: caja2;
@@ -50,6 +53,9 @@
     align-items: flex-end;
 }
 
+.caja2:hover{
+    transform: scale(1.1);
+}
 .caja3{
     grid-area: caja3;
     background-color: chartreuse;
@@ -58,6 +64,9 @@
     background-position: center;
     background-repeat: no-repeat;
     background-color: red;
+}
+.caja3:hover{
+    transform: scale(1.1);
 }
 
 .caja4{
@@ -68,6 +77,9 @@
     background-repeat: no-repeat;
     background-position: center;
     background-color: black;
+}
+.caja4:hover{
+    transform: scale(1.1);
 }
 
 .contenedor1{
@@ -138,8 +150,9 @@ justify-content: center;
     display: flex;
     justify-content: space-between;
     width: 100%;
-    height: 100px;
+    height: 150px;
     background-color: red;
+    align-content: center;
 }
 
 .logosunk{
@@ -148,23 +161,30 @@ justify-content: center;
 }
 
 .caja-menu{
-    width: 500px;
-    height: 100px;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 20px;
-    list-style: none;
     
 
 
 }
 
 .caja-hijomenu{
-    width: 200px;
-    height: 50px;
-    color: rgba(231, 230, 213, 0.644);
+    width: 400px;
+    height: 100px;
+    display: flex;
+    color: rgb(0, 0, 0);
+    margin: 15px;
+    border: 2px solid white;
+    align-items: center;
+    justify-content: center;
+    align-items: center;
+}
+
+.caja-hijomenu a{
+    text-decoration: none;
+    color:white;
     font-size: 30px;
+    font-family: 'Anton', sans-serif;
+    font-weight: 1200
 }
 
 .herosunbreak{
@@ -235,30 +255,7 @@ justify-content: center;
     color: black;
 }
 
-@media (max-width: 460px){
-    .caja-menu{
-        flex-direction: column;
-        justify-content: center;
-        align-items: flex-start;
-        padding: 30px;
-    }
-    .caja-hijomenu{
-        width: 200px;
-        height: 70px;
-        background-color: black;
-        margin: 2px;
-    }
 
-.herosunbreak{
-    flex-direction: column;
-    height: 800px;
-}
-.herosunbreak-hijo{
-    width: 300px;
-    height: 300px;
-    margin: 2px;
-}
-}
 
 .elgado{
     width: 100%;
@@ -363,17 +360,7 @@ margin: 2px;
     background-size: cover;
 }
 
-@media (max-width: 460px){
-    .gridarmas{
-        grid-template-columns: 1fr;
-        grid-template-rows:  200px 200px 200px 200px 200px 200px 200px 200px 200px 200px 200px 200px;
 
-    }
-
-    .elgado{
-        flex-direction: column;
-    }
-}
 
 .contenedorFooter {
     display: flex;
@@ -416,7 +403,7 @@ margin: 2px;
     display: flex;
     justify-content: space-between;
     width: 100%;
-    height: 100px;
+    height: 150px;
     background-color: rgb(4, 0, 255);
     border: 2px solid black;
 }
@@ -426,25 +413,8 @@ margin: 2px;
     height: 100px;
 }
 
-.caja-menu{
-    width: 500px;
-    height: 100px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 20px;
-    list-style: none;
-    
 
 
-}
-
-.caja-hijomenu{
-    width: 200px;
-    height: 50px;
-    color: rgba(231, 230, 213, 0.644);
-    font-size: 30px;
-}
 
 .herorise{
     background-image: url(../img/herorise2.jpg);
@@ -564,4 +534,76 @@ margin: 2px;
 .imagenfooter{
     max-width: 100%;
     height: 100%;
+}
+
+
+
+@media (max-width: 460px){
+        .gridarmas{
+            grid-template-columns: 1fr;
+            grid-template-rows:  200px 200px 200px 200px 200px 200px 200px 200px 200px 200px 200px 200px;
+    
+        }
+    
+        .elgado{
+            flex-direction: column;
+        }
+    .flexsunbreak{
+        height: 200px;
+    }
+
+    .caja-menu{
+        flex-direction: column;
+        justify-content: center;
+        padding: 30px;
+    }
+    .caja-hijomenu{
+        width: 200px;
+        height: 30px;
+        margin: 2px;
+    }
+
+    .caja-hijomenu a{
+        font-size: 15px;
+    }
+
+    .flexrise{
+        height: 200px;
+    }
+
+.herosunbreak{
+    flex-direction: column;
+    height: 800px;
+}
+.herosunbreak-hijo{
+    width: 300px;
+    height: 300px;
+    margin: 2px;
+}
+
+.herorise{
+    flex-direction: column;
+    height: 400px;
+    width: 400px;
+    justify-content: center;
+    align-items: center;
+}
+
+.videorise{
+    height: 400px;
+    width: 400px;
+}
+.cuadrorise{
+    height: 400px;
+    width: 400px;
+    font-size: 10px;
+    margin: 15px;
+}
+.areas{
+    flex-direction: column;
+    width: 100vh;
+    height: 300px;
+}
+
+
 }
