--- a/css/style.css
+++ b/css/style.css
@@ -155,37 +155,9 @@ justify-content: center;
     align-content: center;
 }
 
-.logosunk{
-    width: 150px;
-    height: 100px;
-}
-
-.caja-menu{
-    display: flex;
-    
 
 
-}
 
-.caja-hijomenu{
-    width: 400px;
-    height: 100px;
-    display: flex;
-    color: rgb(0, 0, 0);
-    margin: 15px;
-    border: 2px solid white;
-    align-items: center;
-    justify-content: center;
-    align-items: center;
-}
-
-.caja-hijomenu a{
-    text-decoration: none;
-    color:white;
-    font-size: 30px;
-    font-family: 'Anton', sans-serif;
-    font-weight: 1200
-}
 
 .herosunbreak{
     background-image: url(../img/fondo.jpg);
@@ -220,10 +192,15 @@ justify-content: center;
 .herosunbreak-hijo3{
     width: 600px;
     height: 400px;
-    background-color: rgba(169, 169, 169, 0.301);
+    background-color: rgba(8, 8, 8, 0.61);
     border: 2px solid black;
     margin: 20px;
+    display: flex;
+    flex-direction: column;
     text-align: center;
+    justify-content: center;
+    color: white
+
 }
 
 .herosunbreak-hijo4{
@@ -433,11 +410,14 @@ margin: 2px;
     padding: 60px;
 }
 .cuadrorise{
-    width: 500px;
+    width: 600px;
     height: 500px;
-    background-color: darkgray;
+    background-color: rgb(24, 23, 23);
     border: 2px solid black;
     display: flex;
+    color: white;
+    text-align: center;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     margin-right: 200px;
@@ -452,15 +432,22 @@ margin: 2px;
     flex-direction: column;
     
 }
-
+ .rampagef{
+    max-width: 100%;
+    max-height: 100px;
+ }
 .kamura{
-    width: 300px;
-    height: 300px;
+    background-image: url(../img/rampagev2.jpeg);
+    background-size: cover;
+    width: 400px;
+    height: 400px;
     background-color: blue;
     margin: 10px;
 }
 
 .asedio{
+    background-image: url(../img/rampagev1.jpeg);
+    background-size: cover;
     width: 400px;
     height: 400px;
     background-color: yellow;
@@ -468,10 +455,12 @@ margin: 2px;
 }
 
 .heroes{
-    width: 300px;
-    height: 300px;
+    width: 400px;
+    height: 400px;
     background-color: red;
     margin: 10px;
+    background-image: url(../img/rampagev3.jpg);
+    background-size: cover;
 }
 
 .areas{
@@ -536,9 +525,56 @@ margin: 2px;
     height: 100%;
 }
 
+.novedades{
+    display: flex;
+    width: 100%;
+    height: 600px;
+}
 
+.novedadvideo{
+    width: 50%;
+    height: 600px;
+}
 
-@media (max-width: 460px){
+.novedad-imagen{
+    width: 50%;
+    height: 600px;
+    background-image: url(../img/valtraxw.jpg);
+    background-size: cover;
+}
+
+.sectioncontacto{
+    background-image: url("../img/fondoswtich.jpg");
+    width:100%;
+    height:1100px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+
+    border-radius: 5mm;
+    border: 10px grey ridge;
+    justify-content: center;
+    color: beige;
+    
+}
+
+.formulario{
+    width: 500px;
+    height: 500px;
+    display: flex;
+    flex-direction: column;
+    font-size: 30px;
+    justify-content: center;
+    align-items: flex-end;
+    background-color: rgba(0, 0, 0, 0.007);
+}
+
+.form{
+    width: 90px;
+    height: 90px;
+}
+
+@media (max-width: 400px){
         .gridarmas{
             grid-template-columns: 1fr;
             grid-template-rows:  200px 200px 200px 200px 200px 200px 200px 200px 200px 200px 200px 200px;
@@ -575,6 +611,12 @@ margin: 2px;
     flex-direction: column;
     height: 800px;
 }
+.herosunbreak-hijo{
+    width: 300px;
+    height: 300px;
+    margin: 2px;
+}
+
 .herosunbreak-hijo{
     width: 300px;
     height: 300px;
